# optimizing_agents_contextual_engineering

./: .gitignore  CLAUDE.md  _index.md  adr_template.md  check_cells.py  concepts_learning_template.md  learning.md  optimizing_agents_contextual_engineering.ipynb  pyproject.toml  reflexion_problem_statement.md  render_md_notebook.py  todo.md
.claude/agents/: learning-coach.md  pattern-detective.md
.claude/skills/adr/: SKILL.md
.claude/skills/annotate-notebook/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/concept-check/: SKILL.md
.claude/skills/explain-deep/: SKILL.md
.claude/skills/explain-paper/: SKILL.md
.claude/skills/learning-roi-evaluator/: SKILL.md
.claude/skills/new-module/: SKILL.md
.claude/skills/notebook-debug/: SKILL.md
.claude/skills/paper-to-build/: SKILL.md
.claude/skills/pattern-map/: SKILL.md
.claude/skills/quick-recap/: SKILL.md
.claude/skills/session-prep/: SKILL.md
.claude/skills/update-learning/: SKILL.md
papers_and_articles/: context_engineering.md  generative_agents.md  graph_rag_tool_fusion.md  reflexion.md  think_tool.md  toolret.md  toolshed.md
papers_and_articles/builds/: 1_toolret.ipynb  3_graph_rag_tool_fusion.ipynb  graph_rag_tool_fusion.ipynb  toolret.ipynb  toolshed.ipynb
