[project]
name = "optimizing-agents-contextual-engineering"
version = "0.1.0"
description = "Article #2 — Optimizing LangChain AI Agents with Contextual Engineering"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain_community>=0.4",
    "langchain-tavily>=0.2.12",
    "langchain_mcp_adapters>=0.1.11",
    "pydantic>=2.0.0",
    "rich>=14.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
    "tavily-python>=0.5.0",
    "langsmith>=0.7.36",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "langgraph-supervisor>=0.0.31",
    "openevals>=0.2.0",
    "langchain-huggingface>=1.2.2",
    "langchain-moonshot>=0.1.0",
    "pypdf2>=3.0.1",
    "langchain-mistralai>=1.1.4",
    "nltk>=3.9.4",
    "transformers>=5.9.0",
    "fitz>=0.0.1.dev2",
    "pymupdf>=1.27.2.3",
    "tqdm>=4.67.3",
    "langchain-text-splitters>=1.1.2",
    "yfinance>=1.3.0",
    "langchain-google-genai",
    "sentence-transformers",
    "faiss-cpu>=1.14.2",
    "pillow>=12.2.0",
    "torchvision>=0.27.0",
    "langgraph-bigtool>=0.0.3",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"



[tool.setuptools.packages.find]
where = ["."]
include = []

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
